# NotionTimeCapsule

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
.specify/memory/: constitution.md
docs/: docker.md  implementation-plan.md  patterns.md
src/notion_time_capsule/: __init__.py  __main__.py  cli.py  config.py
src/notion_time_capsule/backup/: __init__.py  attachments.py  exporter.py  frontmatter.py  markdown.py  state.py
src/notion_time_capsule/daily/: __init__.py  publisher.py  template.py
src/notion_time_capsule/notion/: __init__.py  client.py  models.py  rate_limiter.py
src/notion_time_capsule/scheduler/: __init__.py  daemon.py  jobs.py
src/notion_time_capsule/utils/: __init__.py  atomic.py  discord.py  logging.py  output.py
templates/: daily.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_atomic.py  test_config.py  test_logging.py  test_markdown.py  test_output.py  test_rate_limiter.py  test_template.py
