[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion-time-capsule"
version = "0.1.0"
description = "Periodic backup of Notion workspaces to markdown with daily content generation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Kyle McMaster" }
]
keywords = ["notion", "backup", "markdown", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "notion-client>=2.0.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "schedule>=1.2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
notion-time-capsule = "notion_time_capsule.cli:main"

[project.urls]
Homepage = "https://github.com/kylemcmaster/NotionTimeCapsule"
Repository = "https://github.com/kylemcmaster/NotionTimeCapsule"

[tool.hatch.build.targets.wheel]
packages = ["src/notion_time_capsule"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=notion_time_capsule --cov-report=term-missing"
